chore: correct spacing of imprint

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     background-color: var(--color-dark);
     color: var(--color-light);
     box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
-    margin: auto;
+    margin: 20px auto; /* Add margin to the top */
 }
 
 #console-output {
@@ -66,18 +66,15 @@ body {
 
 #console-output::-webkit-scrollbar-track {
     background: #333;
-    /* Dark grey background */
 }
 
 #console-output::-webkit-scrollbar-thumb {
     background: #555;
-    /* Black thumb */
-    border-radius: 4px;
+    border-radius: 3px;
 }
 
 #console-output::-webkit-scrollbar-thumb:hover {
     background: #555;
-    /* Darker grey on hover */
 }
 
 #console-input-container {
@@ -154,7 +151,7 @@ body {
 
 .back-to-home {
     text-align: center;
-    padding-bottom: 200px;
+    margin-top: 20px;
 }
 
 .back-to-home img {
